- create informationFragment - add btn to DrugFragment - add code to MainActivity - create ic_notification in drawable - add <uses-permission android:name="android.permission.POST_NOTIFICATIONS" /> in manifest -

--- a/app/src/main/res/layout/fragment_druglist_view.xml
+++ b/app/src/main/res/layout/fragment_druglist_view.xml
@@ -20,5 +20,13 @@
         android:layout_margin="16dp"
         android:src="@drawable/ic_launcher_foreground" />
 
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/informationFab"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="bottom|start"
+        android:layout_margin="16dp"
+        android:src="@drawable/ic_launcher_foreground" />
+
 
 </FrameLayout>
